# compile-time-crc32

./: CMakeLists.txt  README.md  build.sh  debug.sh
src/: ct_crc32.h  main.c
